--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-bootstrap": "^0.32.1",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
+    "react-ga": "^2.4.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scroll": "^1.7.7",
