--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "exports-loader": "^0.7.0",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.7"
   },
@@ -61,7 +62,8 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "2.0.3",
+    "wow.js": "^1.2.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
