--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "deploy": "firebase deploy"
+    "deploy": "npm run build && firebase deploy"
   },
   "jest": {
     "collectCoverageFrom": [
